config/async-requests/100-async-consumer.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: async-consumer
spec:
  template:
    spec:
      containerConcurrency: 1
      containers:
          image: ko://knative.dev/async_component/cmd/async/consumer
