config/async-requests/100-async-producer.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
spec:
  selector:
    app: producer-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-deployment
  labels:
    app: producer-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: producer-deployment
  template:
    metadata:
      labels:
        app: producer-deployment
    spec:
      containers:
      - name: app
        image:  ko://knative.dev/async-component/cmd/async/producer
        ports:
        - containerPort: 80
