config/async-requests/gatewayconfig.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: async-gateway
  namespace: async
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: async-local-gateway
  namespace: async
spec:
  selector:
    istio: cluster-local-gateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
